--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "werewatch",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -10,7 +10,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^6.30.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "streaming-availability": "^4.4.0",
     "web-vitals": "^2.1.4"
   },
